[workspace]
members = ["crates/*"]
resolver = "2"

[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
codegen-units = 24

[profile.dev]
debug = true
opt-level = 1
[profile.release]
debug = true

[workspace.dependencies]
ash = "0.38.0"
bevy_ecs = { version = "0.15.0", features = ["bevy_reflect", "serialize"] }
bevy_reflect = "0.15.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
crossbeam-channel = "0.5.13"
egui = { version = "0.29.1" }
egui-winit = { version = "0.29.1" }
gltf = { version = "1.4.1" }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator", features = ["vulkan", "visualizer"] }
hashbrown = { version = "0.14.3", features = ["nightly"] }
metis = "0.2.1"
meshopt = { git = "https://github.com/SparkyPotato/meshopt-rs" }
notify-debouncer-full = "0.3.1"
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
proc-macro2 = "1.0.92"
raw-window-handle = "0.6.0"
rayon = "1.9.0"
rfd = "0.15.1"
rspirv = "0.12.0"
rustc-hash = "1.1.0"
serde = "1.0.215"
slang = { git = "https://github.com/SparkyPotato/slang-rs" }
static_assertions = "1.1.0"
syn = "2.0.89"
quote = "1.0.37"
thread_local = "1.1.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracy = { package = "tracy_full", version = "1.10.0", features = ["tracing", "enable"] }
uuid = { version = "1.11.0", features = ["bytemuck", "serde", "v4"] }
vek = { path = "crates/vek", features = ["bytemuck", "serde"] }
walkdir = "2.5.0"
winit = "0.30.5"
zstd = "0.13.2"
