[workspace]
members = [
	"crates/*",

	"ext/gpu-allocator",

	"ext/nvtt/nvtt",
	"ext/nvtt/nvtt-sys",

	"ext/rspirv/spirv", 
	"ext/rspirv/rspirv", 

	"ext/slang-rs/",
	"ext/slang-rs/slang-sys",

	"ext/vek",
]
resolver = "2"

[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
codegen-units = 24

[profile.dev]
debug = true
opt-level = 1
[profile.release]
debug = true

[workspace.dependencies]
rad-core = { path = "crates/rad-core" }
rad-graph = { path = "crates/rad-graph" }
rad-renderer = { path = "crates/rad-renderer" }
rad-rhi = { path = "crates/rad-rhi" }
rad-ui = { path = "crates/rad-ui" }
rad-window = { path = "crates/rad-window" }
rad-world = { path = "crates/rad-world" }
rad-world-derive = { path = "crates/rad-world-derive" }

gpu-allocator = { path = "ext/gpu-allocator" }
# nvtt_rs = { path = "ext/nvtt/nvtt", features = ["cuda"] }
rspirv = { path = "ext/rspirv/rspirv" }
slang = { path = "ext/slang-rs" }
vek = { path = "ext/vek", features = ["bytemuck", "serde"] }

ash = "0.38.0"
bevy_ecs = { version = "0.15.0", features = ["bevy_reflect", "multi_threaded", "serialize", "trace"] }
bevy_reflect = "0.15.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytemuck = { version = "1.15.0", features = ["derive"] }
crossbeam-channel = "0.5.13"
egui = { version = "0.30.0" }
egui_plot = { version = "0.30.0" }
egui-winit = { version = "0.30.0" }
gltf = { version = "1.4.1", features = ["KHR_materials_emissive_strength", "KHR_lights_punctual"] }
hashbrown = { version = "0.14.5", features = ["nightly"] }
metis = "0.2.1"
meshopt = { git = "https://github.com/SparkyPotato/meshopt-rs" }
notify-debouncer-full = "0.4.0"
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
proc-macro2 = "1.0.92"
rand = "0.8.5"
range-alloc = "0.1.3"
raw-window-handle = "0.6.0"
rayon = "1.9.0"
rfd = "0.15.1"
rustc-hash = "2.1.0"
serde = "1.0.215"
serde_json = "1.0.133"
static_assertions = "1.1.0"
syn = "2.0.89"
quote = "1.0.37"
thread_local = "1.1.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracy = { package = "tracy_full", version = "1.10.0", features = ["tracing", "enable"] }
uuid = { version = "1.11.0", features = ["bytemuck", "serde", "v4"] }
walkdir = "2.5.0"
winit = "0.30.5"
zstd = "0.13.2"
