[package]
name = "radiance-asset"
version = "0.0.0"
edition = "2021"

[features]
# Support importing.
import = ["dep:gltf", "dep:metis", "dep:meshopt"]
# Support file-based asset systems.
fs = ["dep:walkdir"]

[dependencies]
bytemuck = { workspace = true }
rustc-hash = { workspace = true }
static_assertions = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vek = { workspace = true }
walkdir = { workspace = true, optional = true }
bincode = { workspace = true }
dashmap = { workspace = true }
gltf = { workspace = true, optional = true }
metis = { workspace = true, optional = true }
meshopt = { workspace = true, optional = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
zstd = { workspace = true }

