[package]
name = "radiance-asset"
version = "0.0.0"
edition = "2021"

[dependencies]
radiance-graph = { path = "../graph", features = ["bytemuck"] }

ash = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true }
gltf = { workspace = true }
metis = { workspace = true }
meshopt = { workspace = true }
notify-debouncer-full = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
static_assertions = { workspace = true }
thread_local = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["bytemuck"] }
vek = { workspace = true }
walkdir = { workspace = true }
zstd = { workspace = true }
