[package]
name = "radiance-editor"
version = "0.0.0"
edition = "2021"

[build-dependencies]
radiance-shader-compiler = { path = "../lib/shader-compiler", features = ["build-script"] }

[dependencies]
radiance-asset = { path = "../lib/asset", features = ["fs", "import"] }
radiance-asset-runtime = { path = "../lib/asset-runtime" }
radiance-egui = { path = "../lib/egui" }
radiance-graph = { path = "../lib/graph", features = ["bytemuck"] }
radiance-passes = { path = "../lib/passes" }

ash = { workspace = true }
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
egui = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
vek = { workspace = true }
egui_extras = { workspace = true }
egui_grid = { workspace = true }
egui-winit = { workspace = true }
rfd = { workspace = true }
tracing-subscriber = { workspace = true }
tracy = { workspace = true }
winit = { workspace = true }
