[package]
name = "radiance-editor"
version = "0.0.0"
edition = "2021"

[dependencies]
radiance-asset = { path = "../asset", features = ["fs", "import"] }
radiance-egui = { path = "../egui" }
radiance-graph = { path = "../graph", features = ["bytemuck"] }
radiance-passes = { path = "../passes" }

ash = { workspace = true }
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
egui = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
vek = { workspace = true }
egui_extras = { workspace = true }
egui_grid = { workspace = true }
egui-winit = { workspace = true }
rfd = { workspace = true }
tracing-subscriber = { workspace = true }
tracy = { workspace = true }
winit = { workspace = true }
