[package]
name = "radiance-editor"
version = "0.0.0"
edition = "2021"

[dependencies]
radiance-asset = { path = "../asset" }
radiance-egui = { path = "../egui" }
radiance-graph = { path = "../graph", features = ["bytemuck"] }
radiance-passes = { path = "../passes" }

ash = { workspace = true }
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
egui_grid = { workspace = true }
egui-winit = { workspace = true }
oneshot = { workspace = true }
rayon = { workspace = true }
rfd = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracy = { workspace = true }
vek = { workspace = true }
winit = { workspace = true }
