[package]
name = "rad-editor"
version = "0.0.0"
edition = "2024"

[dependencies]
rad-core = { workspace = true }
rad-graph = { workspace = true }
rad-renderer = { workspace = true }
rad-rhi = { workspace = true }
rad-ui = { workspace = true }
rad-window = { workspace = true }
rad-world = { workspace = true }

bytemuck = { workspace = true }
egui_plot = { workspace = true }
gltf = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
rfd = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracy = { workspace = true }
walkdir = { workspace = true }
zstd = { workspace = true }
