[package]
name = "rad-renderer"
version = "0.0.0"
edition = "2024"

[dependencies]
rad-core = { workspace = true }
rad-graph = { workspace = true }
rad-world = { workspace = true }

ash = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
hashbrown = { workspace = true }
meshopt = { workspace = true }
metis = { workspace = true }
# nvtt_rs = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
static_assertions = { workspace = true }
tracing = { workspace = true }
vek = { workspace = true }
