[package]
name = "rad-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
rad-core = { path = "../rad-core" }
rad-graph = { path = "../rad-graph" }
rad-window = { path = "../rad-window" }

ash = { workspace = true }
bytemuck = { workspace = true }
egui = { workspace = true, features = ["bytemuck"] }
egui-winit = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
tracy = { workspace = true }
vek = { workspace = true }
