[package]
name = "rad-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
rad-core = { workspace = true }
rad-graph = { workspace = true }
rad-window = { workspace = true }

ash = { workspace = true }
bytemuck = { workspace = true }
egui = { workspace = true, features = ["bytemuck"] }
egui-winit = { workspace = true }
hashbrown = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
vek = { workspace = true }
