[package]
name = "rad-world"
version = "0.0.0"
edition = "2021"

[dependencies]
rad-core = { path = "../rad-core" }
rad-world-derive = { path = "../rad-world-derive" }

bevy_ecs = { workspace = true }
bevy_reflect = { workspace = true }
bincode = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
vek = { workspace = true }
