[package]
name = "radiance-asset-runtime"
version = "0.0.0"
edition = "2021"

[build-dependencies]
radiance-shader-compiler = { path = "../shader-compiler", features = ["build-script"] }

[dependencies]
radiance-core = { path = "../core" }
radiance-asset = { path = "../asset" }
radiance-graph = { path = "../graph", features = ["bytemuck"] }
radiance-util = { path = "../util" }

ash = "0.37.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
crossbeam-channel = "0.5.11"
static_assertions = "1.1.0"
rustc-hash = "1.1.0"
tracing = "0.1.37"
uuid = "1.3.3"
vek = { version = "0.16.1", features = ["bytemuck"] }
