[package]
name = "radiance-asset-runtime"
version = "0.0.0"
edition = "2021"

[build-dependencies]
radiance-shader-compiler = { path = "../shader-compiler", features = ["build-script"] }

[dependencies]
radiance-core = { path = "../core" }
radiance-asset = { path = "../asset" }
radiance-graph = { path = "../graph", features = ["bytemuck"] }
radiance-util = { path = "../util" }

ash = { workspace = true }
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
rustc-hash = { workspace = true }
static_assertions = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vek = { workspace = true }

