[package]
name = "radiance-asset"
version = "0.0.0"
edition = "2021"

[features]
# Support importing.
import = ["dep:gltf"]
# Support file-based asset systems.
fs = []

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
dashmap = "5.5.3"
gltf = { version = "1.3.0", optional = true }
meshopt = { git = "https://github.com/gwihlidal/meshopt-rs"}
parking_lot = {  version = "0.12.1", features = ["hardware-lock-elision"] }
rayon = "1.8.0"
rustc-hash = "1.1.0"
rkyv = { version = "0.7.42", features = ["uuid"] }
static_assertions = "1.1.0"
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
vek = { version = "0.16.1", features = ["bytemuck"] }
walkdir = "2.4.0"
zstd = "0.13.0"
