[package]
name = "radiance-asset"
version = "0.0.0"
edition = "2021"

[features]
# Support importing.
import = ["dep:gltf"]
# Support file-based asset systems.
fs = []

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bytemuck = { version = "1.14.0", features = ["derive"] }
dashmap = "5.5.3"
gltf = { version = "1.3.0", optional = true }
meshopt = { git = "https://github.com/gwihlidal/meshopt-rs"}
parking_lot = {  version = "0.12.1", features = ["hardware-lock-elision"] }
rayon = "1.8.0"
rustc-hash = "1.1.0"
static_assertions = "1.1.0"
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }
vek = { version = "0.16.1", features = ["bytemuck", "serde"] }
walkdir = "2.4.0"
zstd = "0.13.0"
