[package]
name = "radiance-egui"
version = "0.0.0"
edition = "2021"

[build-dependencies]
radiance-shader-compiler = { path = "../shader-compiler", features = ["build-script"] }

[dependencies]
radiance-core = { path = "../core" }
radiance-graph = { path = "../graph", features = ["bytemuck"] }
radiance-shader-compiler = { path = "../shader-compiler", features = ["runtime"] }
radiance-util = { path = "../util" }

ash = { workspace = true } 
bytemuck = { workspace = true }
egui = { workspace = true }
rustc-hash = { workspace = true } 
tracing = { workspace = true }
vek = { workspace = true }

