[package]
name = "radiance-egui"
version = "0.0.0"
edition = "2021"

[build-dependencies]
radiance-shader-compiler = { path = "../shader-compiler", features = ["build-script"] }

[dependencies]
radiance-graph = { path = "../graph", features = ["bytemuck"] }
radiance-shader-compiler = { path = "../shader-compiler", features = ["runtime"] }

ash = { workspace = true } 
bytemuck = { workspace = true }
egui = { workspace = true }
rustc-hash = { workspace = true } 
tracing = { workspace = true }
vek = { workspace = true }

