[package]
name = "radiance-graph"
version = "0.0.0"
edition = "2021"

[features]
bytemuck = ["dep:bytemuck"]

[dependencies]
ash = "0.37.2"
bytemuck = { version = "1.7.0", optional = true }
gpu-allocator = { version = "0.22.0", features = ["vulkan"] }
hashbrown = { version = "0.14.0", features = ["nightly"] }
raw-window-handle = "0.5.0"
rustc-hash = "1.1.0"
tracing = "0.1.36"
