[package]
name = "radiance-passes"
version = "0.0.0"
edition = "2021"

[build-dependencies]
radiance-shader-compiler = { path = "../shader-compiler", features = ["build-script"] }

[dependencies]
radiance-asset-runtime = { path = "../asset-runtime" }
radiance-graph = { path = "../graph", features = ["bytemuck"] }
radiance-shader-compiler = { path = "../shader-compiler", features = ["runtime"] }

ash = { workspace = true }
crossbeam-channel = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
vek = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

