[package]
name = "radiance-passes"
version = "0.0.0"
edition = "2021"

[build-dependencies]
radiance-shader-compiler = { path = "../shader-compiler", features = ["build-script"] }

[dependencies]
radiance-asset = { path = "../asset" }
radiance-graph = { path = "../graph", features = ["bytemuck"] }
radiance-shader-compiler = { path = "../shader-compiler", features = ["runtime"] }

ash = { workspace = true }
bytemuck = { workspace = true }
crossbeam-channel = { workspace = true }
half = { workspace = true }
parry3d = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
rayon = { workspace = true }
rustc-hash = { workspace = true }
static_assertions = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vek = { workspace = true }

