[package]
name = "radiance-shader-compiler"
version = "0.0.0"
edition = "2021"

[features]
runtime = ["ash"]
compile = ["dep:hassle-rs", "dep:serde", "dep:serde_json", "dep:cargo_toml"]
build-script = ["compile"]

[dependencies]
radiance-shader-compiler-macros = { path = "../shader-compiler-macros" }

ash = { version = "0.37.2", optional = true }
cargo_toml = { version = "0.15.2", optional = true }
hassle-rs = { version = "0.10.0", optional = true }
rustc-hash = "1.1.0"
serde = { version = "1.0.160", features = ["derive"], optional = true }
serde_json = { version = "1.0.96", optional = true }
walkdir = "2.3.3"
