[package]
name = "radiance-shader-compiler"
version = "0.0.0"
edition = "2021"

[features]
runtime = ["dep:ash", "dep:notify-debouncer-full", "compile"]
compile = ["dep:hassle-rs", "dep:serde", "dep:serde_json", "dep:cargo_toml"]
build-script = ["compile"]

[dependencies]
radiance-shader-compiler-macros = { path = "../shader-compiler-macros" }

ash = { workspace = true, optional = true  }
notify-debouncer-full = { workspace = true, optional = true }
rspirv = { workspace = true }
rustc-hash = { workspace = true }
walkdir = { workspace = true }
cargo_toml = { workspace = true, optional = true }
hassle-rs = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

