[package]
name = "nvtt_sys"
version = "0.5.2"
edition = "2021"
authors = [ "Luka Mijalkovic <luka.mijalkovic3@gmail.com>" ]
description = "Unsafe bindings for the Nvidia Texture Tools SDK."
repository = "https://github.com/mijalk0/nvtt"
documentation = "https://mijalk0.github.io/nvtt"
license = "MIT"
readme = "README.md"
keywords = [ "image_processing", "texture", "texture_compression", "nvidia", "nvtt" ]
rust-version = "1.66"

[build-dependencies]
windows = { version = "0.43.0", features = [ "Win32_UI_Shell", "Win32_Foundation" ] }
bindgen = "0.63"
cfg-if = "1"

[dev-dependencies]
libc = "0.2"
